# MDDB-workflow

./: .gitignore  .readthedocs.yaml  DEVELOPMENT.md  MANIFEST.in  README.md  USAGE.md  distance_per_residue.py  energies.py  environment.yml  get_box_size.py  get_first_frame.py  get_summarized_trajectory.py  hydrogen_bonds.py  image_and_fit.py  index.py  model_wf  model_wf.py  mwf.py  pca.py  pca_contacts.py  pockets.py  pyproject.toml  rmsd_pairwise.py  rmsd_per_residue.py  setup.py  topology_corrector.py  topology_manager.py
.github/workflows/: CI.yml  linting_and_testing.yml  publish-ghcr.yaml  release.yml  test-container-trigger.yml  test-tag-push.yml  test-tag-triggered.yml  testing.yml
aux/: input.in  res.lib  test.in  vdwprm
coverage/: class_index.html  coverage.xml  function_index.html  index.html  status.json  z_2eea57cb32864d79___init___py.html  z_2eea57cb32864d79_arg_cksum_py.html  z_2eea57cb32864d79_auxiliar_py.html  z_2eea57cb32864d79_bibitransformer_nassa_py.html  z_2eea57cb32864d79_cache_py.html  z_2eea57cb32864d79_constants_py.html  z_2eea57cb32864d79_conversions_py.html  z_2eea57cb32864d79_file_py.html  z_2eea57cb32864d79_filters_py.html  z_2eea57cb32864d79_formats_py.html  z_2eea57cb32864d79_gmx_spells_py.html  z_2eea57cb32864d79_heatmaps_nassa_py.html  z_2eea57cb32864d79_httpsf_py.html  z_2eea57cb32864d79_mda_spells_py.html  z_2eea57cb32864d79_mdt_spells_py.html  z_2eea57cb32864d79_nassa_file_py.html  z_2eea57cb32864d79_nucleicacid_py.html  z_2eea57cb32864d79_pyt_spells_py.html  z_2eea57cb32864d79_register_py.html  z_2eea57cb32864d79_remote_py.html  z_2eea57cb32864d79_selections_py.html  z_2eea57cb32864d79_structures_py.html  z_2eea57cb32864d79_subsets_py.html  z_2eea57cb32864d79_topologies_py.html  z_2eea57cb32864d79_type_hints_py.html  z_2eea57cb32864d79_vmd_spells_py.html  z_2eea57cb32864d79_warnings_py.html  z_620d45bc5280f27a___init___py.html  z_620d45bc5280f27a_chains_py.html  z_620d45bc5280f27a_check_inputs_py.html  z_620d45bc5280f27a_conversions_py.html  z_620d45bc5280f27a_filter_atoms_py.html  z_620d45bc5280f27a_find_interaction_types_py.html  z_620d45bc5280f27a_fix_gromacs_masses_py.html  z_620d45bc5280f27a_generate_ligands_desc_py.html  (+156 more)
dev/: input_setter.ipynb  input_setter.py  mutations.ipynb  topology_analyzer.ipynb
dev/.ipynb_checkpoints/: input_setter-checkpoint.ipynb
docker/: Dockerfile
docs/: Makefile  requirements.txt
docs/scripts/: format_substitutions.py  generate_input_docs.py  generate_inputs_docs.py  generate_task_docs.py
docs/source/: change_log.rst  conf.py  coverage.rst  dataset.ipynb  develop.rst  index.rst  input.rst  mwf.rst  python.ipynb  python.rst  python_examples.ipynb  tasks.rst  usage.rst
envs/: environment.yml  environment_helpar.yml
manual_tools/: api_tools.py  chainer.py  inputs_generator.py  inputs_generator_by_pdb.py  logger_and_loader.py  npy_2_json.py  references_updater.py  selection_to_ndx.py
mddb_wf/: __init__.py  __main__.py  console.py  mwf.py
mddb_wf/analyses/: area_per_lipid.py  clusters.py  density.py  distance_per_residue.py  energies.py  helical_parameters.py  hydrogen_bonds.py  hydrogen_bonds_2.py  lipid_interactions.py  lipid_order.py  markov.py  markov_2.py  nassa.py  pca.py  pca_contacts.py  pockets.py  rgyr.py  rmsd_check.py  rmsd_pairwise.py  rmsd_per_residue.py  rmsds.py  rmsf.py  sasa.py  thickness.py  tmscores.py
mddb_wf/resources/: energies_analysis_viewer.ipynb  get_energies_sum.py  nucleobase_splitter.ipynb  references_updater.py
mddb_wf/tools/: chains.py  check_inputs.py  filter_atoms.py  fix_gromacs_masses.py  generate_ligands_desc.py  generate_map.py  generate_membrane_mapping.py  generate_metadata.py  generate_pdb_references.py  generate_topology.py  get_atoms_count.py  get_bonds.py  get_box_size.py  get_charges.py  get_first_frame.py  get_inchi_keys.py  get_pdb_frames.py  get_reduced_trajectory.py  get_screenshot.py  get_summarized_trajectory.py  image_and_fit.py  nassa_loaders.py  process_interactions.py  residue_mapping.py  structure_corrector.py  topology_manager.py
mddb_wf/utils/: auxiliar.py  constants.py  conversions.py  file.py  filters.py  formats.py  gmx_spells.py  heatmaps_nassa.py  mdt_spells.py  nassa_file.py  (+8 more)
mddb_workflow/: __init__.py  console.py  mwf.py
model_workflow/: __init__.py  console.py  constants.py  mwf.py
model_workflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: conftest.py  test_console.py  test_density.py  test_membrane.py  test_membranes.py  test_nassa.py  test_rmsd.py  test_run.py  test_structure.py  test_vmd.py
(+375 files in other folders)
