[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model_workflow"
version = "0.0.1"
requires-python = ">=3.9.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "genbadge[all]",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
]

[project.scripts]
mwf = "model_workflow.console:main"

[tool.setuptools]
packages = ["model_workflow", "model_workflow.analyses", "model_workflow.tools", "model_workflow.utils"]
include-package-data = true

[tool.setuptools.package-data]
# Include files in the resources but not subfolders
"model_workflow" = ["resources/*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = ["test"]
addopts = "-rsx -v --durations=0"

[tool.conda-deny]
safe-licenses = [
    "Apache-2.0",
    "Unlicense",
    "WTFPL",
    "MIT",
    "PSF-2.0",
    "BSD-3-Clause",
    "BSD-2-Clause",
    "ISC",
    "LGPL-2.1-or-later",
    "LGPL-2.1-only",
    "Zlib",
]