[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mddb_workflow"
version = "0.1.8"
requires-python = ">=3.11.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "genbadge[all]",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
    "nbsphinx",
]

[project.scripts]
mwf = "mddb_workflow.console:main"

[tool.setuptools]
packages = ["mddb_workflow", "mddb_workflow.analyses", "mddb_workflow.tools", "mddb_workflow.utils"]
include-package-data = true

[tool.setuptools.package-data]
# Include files in the resources but not subfolders
"mddb_workflow" = ["resources/*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = ["test"]
addopts = "-rsx -v --durations=10"

[tool.ruff.lint]
# E,W: pycodestyle, F: pyflakes, D: pydocstyle
select = ["D", "E", "F", "W"] 
ignore = ["E501", "F403", "F405", "E226", "E701", "E702", "D204", "D205", "D100"]
fixable = ["D202", "D209", "D210", "D212", "D413", "E251", "E261", "E711",
 "E201", "E202", "E203", "E211", "E225", "E231", "E302", "E305", "W"]
preview = true
[tool.ruff.format]
quote-style = "single"
[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.pyrefly]
project-includes = ["mddb_workflow/**"]

[tool.conda-deny]
safe-licenses = [
    "Apache-2.0",
    "Apache-2.0 WITH LLVM-exception", # Apache License 2.0 with LLVM exception
    "Unlicense",
    "WTFPL",
    "MIT",
    "PSF-2.0",
    "BSD-3-Clause",
    "BSD-2-Clause",
    "BSL-1.0",
    "OFL-1.1", # Open Font License
    "ISC",
    #"GPL-1.0-or-later",
    #"GPL-2.0-only",
    #"GPL-2.0-or-later",
    "LGPL-2.0-or-later",
    "LGPL-2.1-only",
    "LGPL-2.1-or-later",
    #"GPL-3.0-only",
    #"GPL-3.0-or-later",
    "LGPL-3.0-only",
    "LGPL-3.0-or-later",
    "GPL-3.0-only WITH GCC-exception-3.1", # GPL with GCC Runtime Library Exception
    "Python-2.0",
    "Zlib"
]